--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
-numpy==1.14.5
+numpy >= 1.16.5
+plotly==4.12.0
+pandas==1.0.3;python_version>="3.0"
+yfinance==0.1.59
+matplotlib==3.4.2
+scipy==1.6.3
